--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
 body {
+  height: 100%;
+  /* width: 100%; */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: #ffffff;
+  overflow-x: hidden;
+}
+
+body * {
+  color: #ffffff;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.center-horizontally {
+  text-align: center;
+}
+
+.center-vertically {
+  margin: auto;
+}
+
+.card {
+  background-color: #2d2d34;
+  border: 1px solid #2d2d34;
+  border-radius: 20px;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
+}
+
+.center-children {
+  align-items: center;
+}
+
+.form-control {
+  display: inline-block;
+}
+
+.signup-btn {
+  background-color: #04d9ff;
+  color: #ffffff;
+}
+
+.signup-card {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+select > option {
+  color: black;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
